YTI-1105: Reverting earlier Safari bugfix as it causes double scrollbars in other browsers.

--- a/src/styles/shared/searchTableModalContent.scss
+++ b/src/styles/shared/searchTableModalContent.scss
@@ -3,7 +3,7 @@
 div.table-content-container {
   display: flex;
   flex-direction: column;
-  height: auto;
+  height: 100%;
   min-width: 900px;
   position: relative;
 
